--- a/programs.html
+++ b/programs.html
@@ -59,36 +59,35 @@
 <body>
   <!-- Navbar -->
   <nav class="fixed w-full z-50 glass py-4 px-4 sm:px-8">
-  <div class="max-w-6xl mx-auto flex justify-between items-center">
-    <a href="index.html" class="text-xl sm:text-2xl font-bold highlight">AI4ALL</a>
+    <div class="max-w-6xl mx-auto flex justify-between items-center">
+      <a href="index.html" class="text-xl sm:text-2xl font-bold highlight">AI4ALL</a>
 
-    <!-- Desktop Nav -->
-    <div class="hidden md:flex gap-4 sm:gap-6 text-sm sm:text-base">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="programs.html" class="text-blue-800 font-semibold">Programs</a>
-      <a href="impact.html">Impact</a>
-      <a href="get-involved.html">Get Involved</a>
+      <!-- Desktop Nav -->
+      <div class="hidden md:flex gap-4 sm:gap-6 text-sm sm:text-base">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="programs.html" class="text-blue-800 font-semibold">Programs</a>
+        <a href="impact.html">Impact</a>
+        <a href="get-involved.html">Get Involved</a>
+      </div>
+
+      <!-- Mobile Hamburger -->
+      <button id="mobile-menu-button" class="md:hidden text-blue-800 focus:outline-none" aria-label="Toggle navigation">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
     </div>
 
-    <!-- Mobile Hamburger -->
-    <button id="mobile-menu-button" class="md:hidden text-blue-800 focus:outline-none" aria-label="Toggle navigation">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-    </button>
-  </div>
-
-  <!-- Mobile Nav Links -->
-  <div id="mobile-menu" class="md:hidden hidden flex-col gap-3 px-6 pt-4 pb-4">
-    <a href="index.html" class="block">Home</a>
-    <a href="about.html"  class="block">About</a>
-    <a href="programs.html" class="block text-blue-800 font-semibold">Programs</a>
-    <a href="impact.html" class="block">Impact</a>
-    <a href="get-involved.html" class="block">Get Involved</a>
-  </div>
-</nav>
+    <!-- Mobile Nav Links -->
+    <div id="mobile-menu" class="md:hidden hidden flex-col gap-3 px-6 pt-4 pb-4">
+      <a href="index.html" class="block">Home</a>
+      <a href="about.html" class="block">About</a>
+      <a href="programs.html" class="block text-blue-800 font-semibold">Programs</a>
+      <a href="impact.html" class="block">Impact</a>
+      <a href="get-involved.html" class="block">Get Involved</a>
+    </div>
+  </nav>
 
   <!-- Hero Section -->
   <section class="pt-24 pb-12 text-center shadow-lg">
@@ -234,24 +233,47 @@
   <footer class="px-6 py-8 bg-gray-900 text-gray-300 text-center text-sm">
     <div class="flex flex-col md:flex-row items-center justify-between gap-4 max-w-5xl mx-auto">
       <p>© 2025 AI4ALL Armenia – Powered by EIF · Empowering Every Region</p>
-      <div class="flex gap-4">
-        <a href="https://www.instagram.com/ai4allbyeif/" target="_blank" aria-label="Instagram"
-          class="hover:text-white transition">
+      <div class="flex flex-col md:flex-row items-center gap-6 md:gap-4 text-gray-400">
+
+        <!-- Phone -->
+        <a href="tel:+011219797" class="hover:text-white transition flex items-center gap-1" aria-label="Phone">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
             <path
-              d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm4.88-.38a.88.88 0 1 1 0 1.75.88.88 0 0 1 0-1.75Z" />
+              d="M6.62 10.79a15.053 15.053 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.11-.21 11.36 11.36 0 0 0 3.58.57 1 1 0 0 1 1 1v3.5a1 1 0 0 1-1 1A17 17 0 0 1 3 6a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1 11.36 11.36 0 0 0 .57 3.58 1 1 0 0 1-.21 1.11l-2.24 2.1z" />
           </svg>
+          <span>(011) 219797</span>
         </a>
-        <a href="https://www.facebook.com/AI4ALLbyEIF/?ref=_xav_ig_profile_page_web#" target="_blank"
-          aria-label="Facebook" class="hover:text-white transition">
+
+        <!-- Email -->
+        <a href="mailto:info@eif.am" class="hover:text-white transition flex items-center gap-1" aria-label="Email">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
             <path
-              d="M13.5 12.9h2.9l.5-3.4h-3.4V7.9c0-1 .3-1.7 1.7-1.7h1.7V3.1c-.3 0-1.3-.1-2.5-.1-2.5 0-4.1 1.5-4.1 4.3v2.2H8v3.4h2.3V21h3.2v-8.1Z" />
+              d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 2-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z" />
           </svg>
+          <span>info@eif.am</span>
         </a>
+
+        <!-- Social icons -->
+        <div class="flex gap-4">
+          <a href="https://www.instagram.com/ai4allbyeif/" target="_blank" aria-label="Instagram"
+            class="hover:text-white transition">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
+              <path
+                d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm4.88-.38a.88.88 0 1 1 0 1.75.88.88 0 0 1 0-1.75Z" />
+            </svg>
+          </a>
+          <a href="https://www.facebook.com/AI4ALLbyEIF/?ref=_xav_ig_profile_page_web#" target="_blank"
+            aria-label="Facebook" class="hover:text-white transition">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
+              <path
+                d="M13.5 12.9h2.9l.5-3.4h-3.4V7.9c0-1 .3-1.7 1.7-1.7h1.7V3.1c-.3 0-1.3-.1-2.5-.1-2.5 0-4.1 1.5-4.1 4.3v2.2H8v3.4h2.3V21h3.2v-8.1Z" />
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
   </footer>
+
 
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
