--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
       <!-- Desktop Nav -->
       <div class="hidden md:flex gap-4 sm:gap-6 text-sm sm:text-base items-center">
-        <a href="index.html" class="text-blue-800 font-semibold">Home</a>
-        <a href="about.html">About</a>
-        <a href="programs.html">Programs</a>
-        <a href="impact.html">Impact</a>
-        <a href="get-involved.html">Get Involved</a>
+        <a href="index.html" class="text-blue-800 font-semibold" data-translate-key="nav_home">Home</a>
+        <a href="about.html" data-translate-key="nav_about">About</a>
+        <a href="programs.html" data-translate-key="nav_programs">Programs</a>
+        <a href="impact.html" data-translate-key="nav_impact">Impact</a>
+        <a href="get-involved.html" data-translate-key="nav_get_involved">Get Involved</a>
 
         <!-- Language Selector -->
         <div class="flex items-center gap-2 ml-4">
@@ -120,11 +120,11 @@
 
     <!-- Mobile Nav Links -->
     <div id="mobile-menu" class="md:hidden hidden flex-col gap-3 px-6 pt-4 pb-4">
-      <a href="AI4All.html" class="block text-blue-800 font-semibold">Home</a>
-      <a href="about.html" class="block">About</a>
-      <a href="programs.html" class="block">Programs</a>
-      <a href="impact.html" class="block">Impact</a>
-      <a href="get-involved.html" class="block">Get Involved</a>
+      <a href="AI4All.html" class="block text-blue-800 font-semibold" data-translate-key="nav_home">Home</a>
+      <a href="about.html" class="block" data-translate-key="nav_about">About</a>
+      <a href="programs.html" class="block" data-translate-key="nav_programs">Programs</a>
+      <a href="impact.html" class="block" data-translate-key="nav_impact">Impact</a>
+      <a href="get-involved.html" class="block" data-translate-key="nav_get_involved">Get Involved</a>
       <div class="flex items-center gap-2 pt-2">
         <button id="mobile-translate-btn"
           class="flex items-center gap-1 px-3 py-1 rounded-full bg-white bg-opacity-20 hover:bg-opacity-30 transition">
@@ -167,7 +167,7 @@
         <p class="text-gray-700 mb-4" data-translate-key="about_text1">
           <strong>AI4ALL</strong> educational initiative aims to equip people from various professions and interests
           with the knowledge and skills needed to effectively use AI tools and be prepared for upcoming changes.
-          The initiative’s courses and workshops are conducted in Armenian, providing participants with modern and
+          The initiative's courses and workshops are conducted in Armenian, providing participants with modern and
           relevant content.
         </p>
         <p class="text-gray-700" data-translate-key="about_text2">
@@ -302,10 +302,15 @@
     // Translation functionality
     const translations = {
       en: {
+        nav_home: "Home",
+        nav_about: "About",
+        nav_programs: "Programs",
+        nav_impact: "Impact",
+        nav_get_involved: "Get Involved",
         hero_title: "Empowering Armenia with <span class='highlight'>AI4ALL</span>",
         hero_subtitle: "A national initiative by the Enterprise Incubator Foundation to make AI education accessible, equitable, and empowering for Armenia's youth—wherever they live.",
-        about_title: "What is AI4ALL?",
-        about_text1: "<strong>AI4ALL</strong> educational initiative aims to equip people from various professions and interests with the knowledge and skills needed to effectively use AI tools and be prepared for upcoming changes. The initiative’s courses and workshops are conducted in Armenian, providing participants with modern and relevant content.",
+        about_title: "What is <span class='highlight'>AI4ALL</span>?",
+        about_text1: "<strong>AI4ALL</strong> educational initiative aims to equip people from various professions and interests with the knowledge and skills needed to effectively use AI tools and be prepared for upcoming changes. The initiative's courses and workshops are conducted in Armenian, providing participants with modern and relevant content.",
         about_text2: "Our mission is to ensure that every student—from Yerevan to Syunik—can access the tools, mentors, and knowledge needed to innovate with AI.",
         impact_title: "Our National Footprint",
         impact_stat1: "Young People Empowered",
@@ -317,7 +322,7 @@
         program1_desc: "Practical skills for high schoolers using real-world AI examples—from chatbots to computer vision.",
         program2_title: "AI in Education",
         program2_desc: "Courses for educators to integrate AI into school curricula, projects, and tech clubs.",
-        program3_title: "Creative AI",
+        program3_title: "Creative AI Labs",
         program3_desc: "Digital art, storytelling, and social innovation using AI.",
         cta_title: "Help Shape Armenia's AI Future",
         cta_subtitle: "Are you a student, school, NGO, or tech leader? Join us in building the most inclusive AI movement in the region.",
@@ -325,10 +330,15 @@
         footer_copyright: "© 2025 AI4ALL Armenia – Powered by EIF · Empowering Every Region"
       },
       hy: {
+        nav_home: "Գլխավոր",
+        nav_about: "Մեր Մասին",
+        nav_programs: "Ծրագրեր",
+        nav_impact: "Արդյունքներ",
+        nav_get_involved: "Միացեք Մեզ",
         hero_title: "Հզորացնելով Հայաստանը <span class='highlight'>AI4ALL</span>-ի հետ",
         hero_subtitle: "EIF-ի ազգային նախաձեռնությունը՝ արհեստական բանականության կրթությունը մատչելի, հավասար և հզորացնող դարձնելու համար։",
-        about_title: "Ի՞նչ է <span class='highlight'>AI4ALL</span>L-ը",
-        about_text1: "<strong>AI4ALL</strong>-ը կրթական նախաձեռնությունը նպատակ ունի զինել տարբեր մասնագիտության և հետաքրքրությունների տեր մարդկանց գիտելիքներով և հմտություններով, որպեսզ ի վերջիններս կարողանան արդյունավետ կերպով կիրառել AI գործիքները և պատրաստ լինեն նոր փոփոխությունների։",
+        about_title: "Ի՞նչ է <span class='highlight'>AI4ALL</span>-ը",
+        about_text1: "<strong>AI4ALL</strong>-ը կրթական նախաձեռնությունը նպատակ ունի զինել տարբեր մասնագիտության և հետաքրքրությունների տեր մարդկանց գիտելիքներով և հմտություններով, որպեսզի վերջիններս կարողանան արդյունավետ կերպով կիրառել AI գործիքները և պատրաստ լինեն նոր փոփոխությունների։",
         about_text2: "Մեր առաքելությունն է ապահովել, որ յուրաքանչյուր ուսանող՝ Երևանից մինչև Սյունիք, կարողանա մուտք ունենալ AI-ով նորարարելու համար անհրաժեշտ գործիքներին, մենթորներին և գիտելիքներին:",
         impact_title: "Մեր Ազգային Ոտնահետքը",
         impact_stat1: "Հզորացված Երիտասարդներ",
@@ -349,7 +359,8 @@
       }
     };
 
-    let currentLang = 'en';
+    // Initialize language from localStorage or default to 'en'
+    let currentLang = localStorage.getItem('ai4all-lang') || 'en';
     const translateBtn = document.getElementById('translate-btn');
     const mobileTranslateBtn = document.getElementById('mobile-translate-btn');
     const currentLangEl = document.getElementById('current-lang');
@@ -365,37 +376,42 @@
       // Simulate network delay (remove in production)
       setTimeout(() => {
         currentLang = currentLang === 'en' ? 'hy' : 'en';
-        currentLangEl.textContent = currentLang.toUpperCase();
-        mobileCurrentLangEl.textContent = currentLang.toUpperCase();
-
-        // Update all translatable elements
-        document.querySelectorAll('[data-translate-key]').forEach(el => {
-          const key = el.getAttribute('data-translate-key');
-          if (translations[currentLang][key]) {
-            if (el.tagName === 'INPUT' || el.tagName === 'TEXTAREA') {
-              el.value = translations[currentLang][key];
-            } else {
-              el.innerHTML = translations[currentLang][key];
-            }
-          }
-        });
-
+        // Save to localStorage
+        localStorage.setItem('ai4all-lang', currentLang);
+        
+        updateLanguage();
+        
         // Hide loading indicator
         translationLoader.style.display = 'none';
         mobileTranslationLoader.style.display = 'none';
-      }, 300); // Reduced delay for better UX
+      }, 300);
+    }
+
+    function updateLanguage() {
+      currentLangEl.textContent = currentLang.toUpperCase();
+      mobileCurrentLangEl.textContent = currentLang.toUpperCase();
+
+      // Update all translatable elements
+      document.querySelectorAll('[data-translate-key]').forEach(el => {
+        const key = el.getAttribute('data-translate-key');
+        if (translations[currentLang][key]) {
+          if (el.tagName === 'INPUT' || el.tagName === 'TEXTAREA') {
+            el.value = translations[currentLang][key];
+          } else {
+            el.innerHTML = translations[currentLang][key];
+          }
+        }
+      });
     }
 
     // Event listeners for both buttons
     translateBtn.addEventListener('click', toggleLanguage);
     mobileTranslateBtn.addEventListener('click', toggleLanguage);
 
-    // Initialize language
+    // Initialize language on page load
     document.addEventListener('DOMContentLoaded', () => {
-      currentLangEl.textContent = currentLang.toUpperCase();
-      mobileCurrentLangEl.textContent = currentLang.toUpperCase();
+      updateLanguage();
     });
   </script>
 </body>
-
 </html>
